fix to html and added 4 octotorpes #### to all the echos in all the scrips

--- a/Websites/fermiumlabs_com/site/index.html
+++ b/Websites/fermiumlabs_com/site/index.html
@@ -147,7 +147,7 @@
           			<a href="https://www.facebook.com/fermiumlabs" target="_blank" class="hi-icon hi-icon-fb">Facebook</a>
           			<a href="https://www.linkedin.com/company/fermium-labs" target="_blank" class="hi-icon hi-icon-lin">LinkedIn</a>
           			<a href="mailto:info@fermiumlabs.com" target="_blank" class="hi-icon hi-icon-mail">Mail</a>
-          			<a onclick="zE.activate({hideOnClose: true});"  class="hi-icon hi-icon-chat">Contact</a>
+          			<a href="javascript:void(0);" onclick="zE.activate({hideOnClose: true});"  class="hi-icon hi-icon-chat">Contact</a>
           		</div>
           </section>
 
