--- a/Websites/fermiumlabs_com/site/index.html
+++ b/Websites/fermiumlabs_com/site/index.html
@@ -145,7 +145,7 @@
           		<div class="hi-icon-wrap hi-icon-effect-8">
           			<a href="https://twitter.com/fermiumlabs" target="_blank" class="hi-icon hi-icon-tw">Twitter</a>
           			<a href="https://www.facebook.com/fermiumlabs" target="_blank" class="hi-icon hi-icon-fb">Facebook</a>
-          			<a href="https://www.linkedin.com/company/fermium-labs" target="_blank" class="hi-icon hi-icon-lin">LinkedIn</a>
+          			<a href="https://www.linkedin.com/company/fermium-labs" data-proofer-ignore target="_blank" class="hi-icon hi-icon-lin">LinkedIn</a>
           			<a href="mailto:info@fermiumlabs.com" target="_blank" class="hi-icon hi-icon-mail">Mail</a>
           			<a href="javascript:void(0);" onclick="zE.activate({hideOnClose: true});"  class="hi-icon hi-icon-chat">Contact</a>
           		</div>
