fixed some issues with menu on firefox

--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -69,13 +69,17 @@ title:  Fermium LABS - About Us
 		                    <div class="text-center flipper">
                           <div class="front">
 		                        <img alt="Pic" src="img/team-1.jpg">
-                          </div>
-                          <div class="back">
-		                        <div class="title ">
-		                            <h5 class="uppercase ">Sally Marsh</h5>
+														<div class="title mb16">
+		                            
 		                            <span>Creative Director</span>
 		                        </div>
-		                        <p class="">
+                          </div>
+                          <div class="back">
+		                        <div class="title mb16">
+		                            <h5 class="uppercase mb0">Sally Marsh</h5>
+		                            <span>Creative Director</span>
+		                        </div>
+		                        <p class="mb0">
 		                            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.
 		                        </p>
                           </div>
@@ -84,6 +88,10 @@ title:  Fermium LABS - About Us
 		                    <div class="text-center flipper">
                           <div class="front">
 		                        <img alt="Pic" src="img/team-1.jpg">
+														<div class="title mb16">
+		                            
+		                            <span>Creative Director</span>
+		                        </div>
                           </div>
                           <div class="back">
 		                        <div class="title mb16">
