--- a/Websites/fermiumlabs_com/404.html
+++ b/Websites/fermiumlabs_com/404.html
@@ -2,9 +2,19 @@
 layout: error
 title:  404
 ---
+<style>
+	#secondary-error-message:before{
+		content:"Don't cry, take this screaming goat";
+	}
+	#main-error-message:before{
+		content:"404 - Page not found";
+	}
+	.error-div{
+		z-index: 999;
+		font-weight: bold;
+	}
+</style>
 <video autoplay loop id="bgvid">
- 
-        <!-- MP4 must be first for iPad! -->
+ 				<!-- MP4 must be first for iPad! -->
         <source src="./video/goat.mp4" type="video/mp4" /><!-- Safari / iOS video    -->
- 
 </video>
