--- a/Websites/fermiumlabs_com/404.html
+++ b/Websites/fermiumlabs_com/404.html
@@ -10,11 +10,22 @@ title:  404
 		content:"404 - Page not found";
 	}
 	.error-div{
-		z-index: 999;
+		z-index: 3;
+		width:100%;
+		margin-top:15%;
+		position:absolute;
+	}
+	.error-div *{
+		z-index:999;
 		font-weight: bold;
+		color:rgba(255,255,255,1);
 	}
 </style>
+<div class="overlay">
+	
+
 <video autoplay loop id="bgvid">
  				<!-- MP4 must be first for iPad! -->
         <source src="./video/goat.mp4" type="video/mp4" /><!-- Safari / iOS video    -->
-</video>
+	</video></div>
+
