--- a/Websites/fermiumlabs_com/404.html
+++ b/Websites/fermiumlabs_com/404.html
@@ -6,7 +6,7 @@ title:  "404 - Page not found"
 	.error-div{
 		z-index: 3;
 		width:100%;
-		margin: 0 auto;
+		margin-top: 20%;
 		position:absolute;
 	}
 	.error-div *{
