--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -69,7 +69,14 @@ title: Fermium LABS - Contact Us
 					<br>
         </div>
         <div class="col-sm-6 col-md-5 col-md-offset-1">
-          <form class="" data-success="Thanks for your submission, we will be in touch shortly." data-error="Please fill all fields correctly." method="POST" action="./php/former.php" name="former">
+					<h4 class="text-center office">
+							Need help? Let us know!
+						</h4>
+					<br>
+					<br>
+					<br>
+					<br>
+          <form class="former" data-success="Thanks for your submission, we will be in touch shortly." data-error="Please fill all fields correctly." method="POST" action="./php/former.php" name="former">
             <input type="text" class="validate-required" name="z_name" placeholder="Your Name">
             <input type="text" class="validate-required validate-email" name="z_requester" placeholder="Email Address">
             <input type="text" class="validate-required" name="z_subject" placeholder="Your Subject">
@@ -82,8 +89,8 @@ title: Fermium LABS - Contact Us
     </div>
 
   </section>
-  <section class="pt240 pb240">
-    <div class="map-canvas" data-address="Melbourne, Victoria, Australia" data-map-zoom="12"></div>
+  <section class="pt240 pb240 map-holder">
+    <div class="map-canvas " data-address="Fermium LABS srl, Via Monselice 15A, Padova, PD" data-maps-api-key="AIzaSyAR-3ZE8IU22KoprKUxF8ONXyma1IYqqxU" data-map-style='[{"featureType":"water","stylers":[{"saturation":43},{"lightness":-11},{"hue":"#0088ff"}]},{"featureType":"road","elementType":"geometry.fill","stylers":[{"hue":"#ff0000"},{"saturation":-100},{"lightness":99}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"color":"#808080"},{"lightness":54}]},{"featureType":"landscape.man_made","elementType":"geometry.fill","stylers":[{"color":"#ece2d9"}]},{"featureType":"poi.park","elementType":"geometry.fill","stylers":[{"color":"#ccdca1"}]},{"featureType":"road","elementType":"labels.text.fill","stylers":[{"color":"#767676"}]},{"featureType":"road","elementType":"labels.text.stroke","stylers":[{"color":"#ffffff"}]},{"featureType":"poi","stylers":[{"visibility":"on"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#EBE5E0"}]},{"featureType":"poi.park","stylers":[{"visibility":"on"}]},{"featureType":"poi.sports_complex","stylers":[{"visibility":"on"}]}]' data-map-zoom="15"></div>
   </section>
 	
 <script src="js/inoffice.js"></script>
