--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -5,15 +5,15 @@ title:  Fermium LABS
 
 		<div class="main-container">
 		<section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
-		        <ul class="slides">
+		        <ul class="slides flex">
 				{% for project in site.data.projects %}
-		            <li class="overlay image-bg">
+		            <li class="overlay image-bg ">
 		                <div class="background-image-holder">
-		                    <img alt="image" class="background-image blur" src="{{project.image}}">
+		                    <img alt="image" class="background-image blur " src="{{project.image}}">
 		                </div>
 		                <div class="container v-align-transform">
-		                    <div class="row text-center">
-                          <div class="col-sm-4 ">
+		                    <div class="row text-center ">
+                          <div class="col-sm-4">
                             <div id="{{project.slide}}" class="morris-chart prettyprint linenums">
                                 <script>
                                 new Morris.Donut({
