--- a/Websites/fermiumlabs_com/404.html
+++ b/Websites/fermiumlabs_com/404.html
@@ -17,7 +17,7 @@ title:  "404 - Page not found"
 </style>
 
 <div class="overlay">
-	<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+	<div style="position: fixed; z-index: -99; width: 100%; height: 100%" id="goat">
 	  <iframe frameborder="0" height="100%" width="100%" 
 	    src="https://youtube.com/embed/Q9xHb-JDDco?autoplay=1&controls=0&showinfo=0&autohide=1&loop=1&playlist=Q9xHb-JDDco">
 	  </iframe>
