--- a/Websites/fermiumlabs_com/_drafts/error.html
+++ b/Websites/fermiumlabs_com/_drafts/error.html
@@ -12,7 +12,7 @@
       <div class="wrapper ">
         <div class="error-div text-center vcenter">
           <h1 id="main-error-message">{{page.title}}</h1>
-          <h2 id="secondary-error-message"><a href="./index.html">Head back <i class="fa fa-home" aria-hidden="true"></a></p></i></h2>
+          <h2 id="secondary-error-message"><a href="/">Head back <i class="fa fa-home" aria-hidden="true"></a></p></i></h2>
       </div>
         {{ content }}
       </div>
@@ -22,4 +22,3 @@
   </body>
 
 </html>
-
