--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -7,7 +7,7 @@ title:  Fermium LABS - About Us
 			
 		<section class="page-title page-title-3 image-bg overlay parallax">
 		        <div class="background-image-holder">
-		            <img alt="Background Image" class="background-image " src="img/kenny.jpg">
+		            <img alt="Background Image" class="background-image " src="/Assets/img/kenny.jpg">
 		        </div>
 		        <div class="container">
 		            <div class="row">
@@ -50,7 +50,7 @@ title:  Fermium LABS - About Us
 		            
 		        </div></section><section class="page-title page-title-3 image-bg overlay-frm parallax">
 		        <div class="background-image-holder">
-		            <img alt="Background Image" class="background-image" src="img/Padua-1112x630__7_.jpg">
+		            <img alt="Background Image" class="background-image" src="/Assets/img/Padua-1112x630__7_.jpg">
 		        </div>
 		        <div class="container">
 		            <div class="row">
