--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -5,7 +5,7 @@ title: Fermium LABS - Contact Us
 <div class="main-container">
   <section class="page-title page-title-5 image-bg overlay parallax">
 		        <div class="background-image-holder">
-		            <img alt="Background Image" class="background-image" src="img/cover15.jpg">
+		            <img alt="Background Image" class="background-image" src="/Assets/img/cover15.jpg">
 		        </div>
 		        <div class="container">
 		            <div class="row">
@@ -51,13 +51,13 @@ title: Fermium LABS - Contact Us
 						<h5 class="text-center"><small>Check out our ugly faces, if they're green we're in office.</small></h5>
 						<div class="row row-centered">
 								<div id="d" class="col-centered col-md-3 ">
-									<img class="img-circle" src="img/team-1.jpg">
+									<img class="img-circle" alt="Name Surname" src="/Assets/img/team-1.jpg">
 									<div class="overlay-status">
 								</div>
 							</div>
 							<div  class="col-centered col-md-3" id="s">
 								
-									<img class="img-circle" src="img/team-1.jpg">
+									<img class="img-circle" alt="Name Surname" src="/Assets/img/team-1.jpg">
 									<div class="overlay-status">
 										
 									</div>
@@ -93,4 +93,4 @@ title: Fermium LABS - Contact Us
     <div class="map-canvas " data-address="Fermium LABS srl, Via Monselice 15A, Padova, PD" data-maps-api-key="AIzaSyAR-3ZE8IU22KoprKUxF8ONXyma1IYqqxU" data-map-style='[{"featureType":"water","stylers":[{"saturation":43},{"lightness":-11},{"hue":"#0088ff"}]},{"featureType":"road","elementType":"geometry.fill","stylers":[{"hue":"#ff0000"},{"saturation":-100},{"lightness":99}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"color":"#808080"},{"lightness":54}]},{"featureType":"landscape.man_made","elementType":"geometry.fill","stylers":[{"color":"#ece2d9"}]},{"featureType":"poi.park","elementType":"geometry.fill","stylers":[{"color":"#ccdca1"}]},{"featureType":"road","elementType":"labels.text.fill","stylers":[{"color":"#767676"}]},{"featureType":"road","elementType":"labels.text.stroke","stylers":[{"color":"#ffffff"}]},{"featureType":"poi","stylers":[{"visibility":"on"}]},{"featureType":"landscape.natural","elementType":"geometry.fill","stylers":[{"visibility":"on"},{"color":"#EBE5E0"}]},{"featureType":"poi.park","stylers":[{"visibility":"on"}]},{"featureType":"poi.sports_complex","stylers":[{"visibility":"on"}]}]' data-map-zoom="15"></div>
   </section>
 	
-<script src="js/inoffice.js"></script>
+<script src="/Assets/js/inoffice.js"></script>
