fixed other things

--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -14,7 +14,7 @@ title:  Fermium LABS
 		                <div class="container v-align-transform">
 		                    <div class="row text-center ">
                           <div class="col-sm-4">
-                            <div id="{{project.slide}}" class="morris-chart prettyprint linenums">
+                            <div id="{{project.slide}}" class="morris-chart prettyprint linenums hidden-xs hidden-sm">
                                 <script>
                                 new Morris.Donut({
                                   element: '{{project.slide}}',
