useless mini commit that makes davide happy (solved menu problems)

--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -49,9 +49,9 @@ title:  Fermium LABS - About Us
 		            </div>
 
 		        </div></section>
-						<section class="page-title page-title-3 image-bg overlay-frm parallax">
+						  <!--   <section class="page-title page-title-3 image-bg overlay-frm parallax">
 		        <div class="background-image-holder">
-		        <!--    <img alt="Background Image" class="background-image" src="/Assets/img/about-bg-2.jpg">
+		       <img alt="Background Image" class="background-image" src="/Assets/img/about-bg-2.jpg">
 		        </div>
 		        <div class="container">
 		            <div class="row">
