About us page now has decently written content

--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -4,7 +4,6 @@ title:  Fermium LABS - About Us
 ---
 <div class="main-container">
 
-
 		<section class="page-title page-title-3 image-bg overlay parallax">
 		        <div class="background-image-holder">
 		            <img alt="Background Image" class="background-image " src="/Assets/img/about-bg-1.jpg">
@@ -27,23 +26,28 @@ title:  Fermium LABS - About Us
 		                <div class="row mb32 mb-xs-16">
 		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
 
-		                        <p class="lead">
-		                            We aren't opened every day from 9am to 6pm. We haven't got project managers with 30 years of experience, quality consultants or human resource management teams.
-		                        </p>
-                          <p class="lead">
-                            We're a small, tight-knit teams of broad backgrounds guided by the ingenuity of way too young minds.
-
-                          </p>
-                          <p class="lead">
-                            In Fermium LABS srl, products are born directly within new technologies. We rethink, reinvent and redesign what's been left behind
-                          </p>
+													<p class="lead">
+													Fermium LABS srl is a company/firm dedicated to exploiting young mind views and new technologies for the sake of innovation.
+													</p>
+													<p class="lead">
+													We aren't opened every day from 9am to 6pm. We haven't got project managers with 30 years of experience, quality consultants or human resource management teams.
+													</p>
+													<p class="lead">
+													We're a small, tight-knit teams of broad backgrounds guided by the ingenuity of way too young minds. And some salty 'n knowledgeable collaborators.
+													</p>
+													<p class="lead">
+													In Fermium LABS srl, products are born directly within new technologies. We rethink, reinvent and redesign what's been left behind.
+													</p>
 		                    </div>
 		                </div>
 
 		                <div class="row">
 		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-
-		                        <hr>
+													<hr>
+													<p class="lead">
+													Did you leave behind something? 
+													</p>
+		                        
 		                    </div>
 		                </div>
 		            </div>
