--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -27,7 +27,7 @@ title:  Fermium LABS - About Us
 		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
 
 													<p class="lead">
-													Fermium LABS srl is a company/firm dedicated to exploiting young mind views and new technologies for the sake of innovation.
+													Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
 													</p>
 													<p class="lead">
 													We aren't opened every day from 9am to 6pm. We haven't got project managers with 30 years of experience, quality consultants or human resource management teams.
