--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -6,7 +6,7 @@ title: Fermium LABS - Contact Us
 <div class="main-container">
   <section class="page-title page-title-5 image-bg overlay parallax">
 		        <div class="background-image-holder">
-		            <img alt="Background Image" class="background-image" src="/Assets/img/cover15.jpg">
+		            <img alt="Background Image" class="background-image" src="/Assets/img/contactus-cover.jpg">
 		        </div>
 		        <div class="container">
 		            <div class="row">
