--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -3,7 +3,7 @@ layout: default
 title:  Fermium LABS
 ---
 
-		<div class="main-container">
+		<div class="main-container ">
 		<section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
 		        <ul class="slides flex">
 				{% for project in site.data.projects %}
@@ -16,13 +16,14 @@ title:  Fermium LABS
                           <div class="col-sm-4">
                             <div id="{{project.slide}}" class="morris-chart prettyprint linenums">
                      						<script>
-																	new Morris.Donut({
-																		element: '{{project.slide}}',
-																		backgroundColor: 'transparent',
-																		resize: true,
-																		data: {{project.donut|jsonify}},
-																	})
-																</script>
+																new Morris.Donut({
+																	element: '{{project.slide}}',
+																	backgroundColor: 'transparent',
+																	resize: true,
+																	data: {{project.donut|jsonify}}
+																});
+																$('.morris-chart svg text').attr("style", "font-family: Roboto").attr("font-weight", "bold");
+																	</script>
                             </div>
                           </div>
 		                        <div class="col-sm-8 ">
@@ -30,10 +31,10 @@ title:  Fermium LABS
 		                            <p class="lead mb40">
 		                                {% for tags in project.tags %}
 
-		                                <small class="tag">{{tags}}</small>
+		                                <small class="thin">{{tags}}</small>
                                   {% endfor %}
 		                            </p>
-																<p class="lead mb40">
+																<p class="lead mb40 thin">
 																		{{project.description}}
 																</p>
                                 <div class="row policies text-left row-centered">
