--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -27,9 +27,13 @@ title:  Fermium LABS
                             </div>
                           </div>
 		                        <div class="col-sm-8 ">
-		                            <h1 class="mb-xs-16 project-link hvr-underline-from-center"><a href="{{project.project-page}}">{{ project.name }}</a></h1>
-																<h3 class="mb-xs-16 project-link hvr-underline-from-center"><a href="{{project.project-page}}">{{ project.subtitle }}</a></h3>
-		                            <!--<p class="lead mb40">
+		                            <div class="row">
+																	<h1 class="mb-xs-16 project-link title hvr-underline-from-center"><a href="{{project.project-page}}">{{ project.name }}</a></h1>
+																</div>
+																<div class="row">
+																<h3 class="mb-xs-16 project-link subtitle hvr-underline-from-center"><a href="{{project.project-page}}">{{ project.subtitle }}</a></h3>
+															</div>
+																<!--<p class="lead mb40">
 		                                {% for tags in project.tags %}
 
 		                                <small class="thin">{{tags}}</small>
