show br on mobile

--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -39,8 +39,9 @@ title:  Fermium LABS
 																	{{ project.description | markdownify }}
 																</p>
                                 <div class="row policies text-left row-centered">
+																	{% if project.policies!=null %}
                                   <h4 class="text-center">Policies</h4>
-
+																	{% endif %}
                                   {% for policy in project.policies %}
                                   {% assign loopindex= forloop.index | modulo: 2 %}
                                   {% if loopindex==1 %}
