added open graph

--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Fermium LABS - Contact Us
+description: Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
+opengraph_type: business.business
+opengraph_image:
 ---
 <link href="/Assets/css/jquery-toast-plugin.min.css" rel="stylesheet" type="text/css" media="all" />
 <div class="main-container">
