--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title:  Fermium LABS
+description: Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
+opengraph_type: 
+opengraph_image:
 ---
 
 		<div class="main-container ">
