--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 title:  Fermium LABS - About Us
+description: Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
+opengraph_type:
+opengraph_image:
 ---
 <div class="main-container">
 
@@ -45,9 +48,9 @@ title:  Fermium LABS - About Us
 		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
 													<hr>
 													<p class="lead">
-													Did you leave behind something? 
+													Did you leave behind something?
 													</p>
-		                        
+
 		                    </div>
 		                </div>
 		            </div>
