moved fontawesome to contact us page only

--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -5,6 +5,7 @@ description: Fermium LABS srl is a company dedicated to exploiting young mind vi
 opengraph_type: business.business
 opengraph_image:
 ---
+<script src="https://use.fontawesome.com/5a2e728451.js" async></script>
 <link href="/Assets/css/jquery-toast-plugin.min.css" rel="stylesheet" type="text/css" media="all" />
 <div class="main-container">
   <section class="page-title page-title-5 image-bg overlay parallax">
