small fix and build sitemap

--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -36,7 +36,7 @@ opengraph_image:
           <hr>
           <p>
 						Fermium LABS srl
-						<br>Via Monselice 15A, 35142
+						<br>Via Monselice 15a, 35142
 						<br>Padova, PD
 						<br>
 						<br>VAT: IT04986880286
