--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -6,7 +6,8 @@ opengraph_type: business.business
 opengraph_image:
 ---
 <script src="https://use.fontawesome.com/5a2e728451.js" async></script>
-<link href="/Assets/css/jquery-toast-plugin.min.css" rel="stylesheet" type="text/css" media="all" />
+<link href="/Assets/css/jquery-toast-plugin.min.css" rel="stylesheet" type="text/css" media="all"/>
+
 <div class="main-container">
   <section class="page-title page-title-5 image-bg overlay parallax">
 		        <div class="background-image-holder">
@@ -102,8 +103,7 @@ opengraph_image:
             <input type="submit" value="submit" id="submitter" class="disabled">
           </form>
 
-          <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-          <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js" async></script>
         <script>
         $.validate({
           modules : 'toggleDisabled',
