form validator not async

--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -103,7 +103,7 @@ opengraph_image:
             <input type="submit" value="submit" id="submitter" class="disabled">
           </form>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js" async></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js" ></script>
         <script>
         $.validate({
           modules : 'toggleDisabled',
