data-proofer-ignore time.is

--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -75,10 +75,10 @@ opengraph_image:
 						</div>
 					</div>-->
           <div class="time">
-<a href="https://time.is/Italy" id="time_is_link" rel="nofollow" style="color:#666"><svg style="margin-right:20px;height:auto;max-height:14px;max-width:16px"><image xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="//lipis.github.io/flag-icon-css/flags/4x3/it.svg" width="100%" height="100%"></image></svg></a>
+<a href="https://time.is/Italy" data-proofer-ignore id="time_is_link" rel="nofollow" style="color:#666"><svg style="margin-right:20px;height:auto;max-height:14px;max-width:16px"><image xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="//lipis.github.io/flag-icon-css/flags/4x3/it.svg" width="100%" height="100%"></image></svg></a>
   <span id="Italy_z723" style="font-size:1.5em"></span>
 
-  <script src="https://widget.time.is/t.js"></script>
+  <script src="https://widget.time.is/t.js" data-proofer-ignore></script>
   <script>
   time_is_widget.init({Italy_z723:{time_format:"12hours:minutes:secondsAMPM"}});
   </script>
