--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -30,13 +30,13 @@ opengraph_image:
 		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
 
 													<p class="lead">
-													Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
+													Fermium LABS srl is a company dedicated to exploiting young minds and new technologies for the sake of innovation.
 													</p>
 													<p class="lead">
 													We aren't opened every day from 9am to 6pm. We haven't got project managers with 30 years of experience, quality consultants or human resource management teams.
 													</p>
 													<p class="lead">
-													We're a small, tight-knit teams of broad backgrounds guided by the ingenuity of way too young minds. And some salty 'n knowledgeable collaborators.
+													We're a small, tight-knit team of broad backgrounds guided by the ingenuity of way too young minds. And some salty 'n knowledgeable collaborators.
 													</p>
 													<p class="lead">
 													In Fermium LABS srl, products are born directly within new technologies. We rethink, reinvent and redesign what's been left behind.
