added website loader

--- a/Websites/fermiumlabs_com/index.html
+++ b/Websites/fermiumlabs_com/index.html
@@ -2,10 +2,10 @@
 layout: default
 title:  Fermium LABS
 description: Fermium LABS srl is a company dedicated to exploiting young mind views and new technologies for the sake of innovation.
-opengraph_type: 
+opengraph_type:
 opengraph_image:
 ---
-
+{% include pageloader.html %}
 		<div class="main-container ">
 		<section class="cover fullscreen image-slider slider-all-controls controls-inside parallax">
 		        <ul class="slides flex">
