--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -39,7 +39,7 @@ opengraph_image:
 														We're creating flexible and helpful smart manufacturing solutions to unfold the competitiveness problems of our nation's industries.
 													</p>
 													<p class="lead text-center">
-														Check out <a href="index">Houston.</a>
+														Check out <a class="cookie-link" href="/">Houston.</a>
 													</p>
 													<p class="lead">
 														Beware: we haven't got project managers with 30 years of experience, in-house quality consultants or human resource management teams.
