--- a/Websites/fermiumlabs_com/contact-us.html
+++ b/Websites/fermiumlabs_com/contact-us.html
@@ -5,8 +5,9 @@ description: Fermium LABS srl is a company dedicated to exploiting young mind vi
 opengraph_type: business.business
 opengraph_image:
 ---
-<script src="https://use.fontawesome.com/5a2e728451.js" async></script>
-<link href="/Assets/css/jquery-toast-plugin.min.css" rel="stylesheet" type="text/css" media="all"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" media="none" onload="if(media!='all')media='all'">
+<link rel="stylesheet" href="/Assets/css/jquery-toast-plugin.min.css" media="none" onload="if(media!='all')media='all'">
+
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js" ></script>
 
 <div class="main-container">
