updated about us page to reflect more about houston

--- a/Websites/fermiumlabs_com/about-us.html
+++ b/Websites/fermiumlabs_com/about-us.html
@@ -14,51 +14,43 @@ opengraph_image:
 		        <div class="container">
 		            <div class="row">
 		                <div class="col-sm-12 text-center">
-		                    <h3 class="uppercase mb0" >WHAT IS FERMIUM LABS?</h3>
+		                    <h3 class="uppercase mb0" >about us</h3>
 		                </div>
 		            </div>
-
 		        </div>
-
-
 		    </section><section>
 		        <div class="container">
 		            <div class="feed-item mb96 mb-xs-48">
-
-
-		                <div class="row mb32 mb-xs-16">
-		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
-
+		                <div class="row mb32 mb-xs-16 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
 													<p class="lead">
-														Fermium LABS srl is a company dedicated to pervasive, young-minded and bold innovation in the broadest fields of industry.
+														At Fermium LABS srl we're working to tackle the complex issues that are slowing down the adoption of advanced analytical systems in our country's industry.
+													</p>
+													<p class="lead text-center">
+														By making our own.
 													</p>
 													<p class="lead">
-													Over engineered and monolithic products are unfit to answer the needs of today's factories and companies.
-													</p>
-													<p class="lead">
-														We're creating flexible and helpful smart manufacturing solutions to unfold the competitiveness problems of our nation's industries.
+														We're creating Houston, an integrated hardware-software industrial analytics solution molded around the needs of industries that have proven resiliency to traditional approaches.
 													</p>
 													<p class="lead text-center">
 														Check out <a class="cookie-link" href="/">Houston.</a>
 													</p>
-													<p class="lead">
-														Beware: we haven't got project managers with 30 years of experience, in-house quality consultants or human resource management teams.
-													</p>
-													<p class="lead">
-														We're a small, tight-knit team guided by the ingenuity of way too young minds and quite a few salty 'n knowledgeable collaborators.
-													</p>
-													<p class="lead">
-														In Fermium LABS srl, solutions are born directly within new technologies and future-proof paradigms. We rethink, reinvent and redesign what's been left behind.													</p>
-		                    </div>
 		                </div>
-
-		                <div class="row">
-		                    <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
+										<div class="row mb32 mb-xs-16 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
+													<p class="lead">
+														We're a small, tight-knit team guided by the ingenuity of way too young minds and quite a few salty 'n knowledgeable collaborators. 
+													</p>
+													<p class="lead">
+														We work nimbly, relying on the support of industrial, technical and scientific partners.
+													</p>
+													<p class="lead">
+														In Fermium LABS srl, solutions are born directly within new technologies and future-proof paradigms. We rethink, reinvent and redesign what's been left behind.
+													</p>
+		                </div>
+		                <div class="row col-md-8 col-sm-10 col-sm-offset-2 text-center">
 													<hr>
 													<p class="lead">
 													Did you leave behind something?
 													</p>
-		                    </div>
 		                </div>
 		            </div>
 
