--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -77,15 +77,50 @@ opengraph_image:
 		    </section><section id='long-description'>
 		        <div class="container">
 		            <div class="row">
-		                <div class="col-sm-10 col-sm-offset-1 text-center">
-		                    <h3 class="uppercase color-primary mb40 mb-xs-24">{{content.long-description.title}}</h3>
-		                    <p class="lead">
+		                <div class="col-sm-10 col-sm-offset-1 ">
+		                    <h3 class="uppercase color-primary mb40 mb-xs-24 text-center">{{content.long-description.title}}</h3>
+		                    <div>
 													{{content.long-description.body | markdownify}}
-		                    </p>
+		                    </div>
 		                </div>
 		            </div>
 
 		        </div>
 
 		    </section>
+				<section>
+		        <div class="container">
+		            <div class="row">
+		                <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
+		                    <h4 class="uppercase mb80">{{content.protocols.title}}</h4>
+		                    <div class="icon-tabs ">
+		                        <ul class="tabs">
+															{% for protocol in content.protocols.blocks %}
+		                            <li >
+		                                <div class="tab-title opac1 modal-container">
+																			<a href='#' modal-link="{{forloop.index}}" class='btn-modal'>
+		                                    <img class="icon" src="{{protocol.logo}}"></img>
+																				<span class='color-primary'>{{protocol.name}}</span>
+																			</a>
+																			<div class="foundry_modal">
+	                                    	{{protocol.description}}
+	                                		</div>
+		                                </div>
+
+		                            </li>
+															{% endfor %}
+
+		                        </ul>
+		                    </div>
+
+		                </div>
+		            </div>
+
+		        </div>
+
+		    </section>
+
+
+
+
 		</div>
