fix opacity bug

--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -99,7 +99,7 @@ opengraph_image:
 		                            <li >
 		                                <div class="tab-title opac1 modal-container">
 																			<a href='#' modal-link="{{forloop.index}}" class='btn-modal'>
-		                                    <img class="icon" src="{{protocol.logo}}"></img>
+		                                    <img class="icon opac1" src="{{protocol.logo}}"></img>
 																				<span class='color-primary'>{{protocol.name}}</span>
 																			</a>
 																			<div class="foundry_modal">
