--- a/Websites/fermiumlabs_com/products/houston.html
+++ b/Websites/fermiumlabs_com/products/houston.html
@@ -103,7 +103,7 @@ opengraph_image:
 																				<span class='color-primary'>{{protocol.name}}</span>
 																			</a>
 																			<div class="foundry_modal">
-	                                    	{{protocol.description}}
+	                                    	{{protocol.description | markdownify}}
 	                                		</div>
 		                                </div>
 
